deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: back-end
          image: 660990364978.dkr.ecr.eu-west-1.amazonaws.com/rp-se-demo/circle-demo-react:9284137b3a75f556fc4e27cf476fae0d355f01a3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always



# image: 660990364978.dkr.ecr.eu-west-1.amazonaws.com/rp-se-demo/circle-demo-react:d83ca9096d717cef82a68eb6743bb393750d2c4d
