deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - port: 90
      targetPort: 90
      protocol: TCP
